# Dividend

./: .gitignore  README.md  pyproject.toml
app/: cache.py  config.py  main.py  models.py
app/data_sources/: akshare_source.py  base.py
app/services/: dividend_service.py  history_service.py  price_service.py  watcher.py  yield_calculator.py
app/web/static/: app.css  app.js
app/web/templates/: index.html  report.html
config/: watchlist.yaml
docs/: TODO.md  项目档案.md
scripts/: run_dev.ps1  run_dev.sh
tests/: test_config.py  test_dividend_service.py  test_history_service.py  test_live_current.py  test_percentile_and_forecast.py  test_price_service.py  test_watchlist_api.py  test_yield_calculator.py
